Fix details overview page header on mobile (#696)

--- a/static/sass/_pattern_p-image.scss
+++ b/static/sass/_pattern_p-image.scss
@@ -7,6 +7,12 @@
     }
   }
 
+  .p-image--platform {
+    @media screen and (max-width: $breakpoint-medium) {
+      transform: scale(0.75) translateX(-16.5%);
+    }
+  }
+
   .p-image--full-width {
     width: 100%;
   }
